src/test/deca/context/invalid/intermediaire2/elseif/03condition_lvalue.deca
// Description:
// Test de la condition du else if, que x, une simple variable ne marche pas.
//
// Resultats:
//  03condition_lvalue.deca:13:16:
//
// Historique:
//    crée le 10/06/2022
{
    int x;
    if (3 < 2) {
        print("3 < 2");
    } else if ( x ){
        print("3 < 2 && x");
    }
}